gccida/g1/try_combine
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2034:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v71; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2067:4: error: expected ';' after expression
rtx v104; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2067:5: error: use of undeclared identifier 'v104'
rtx v104; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2070:4: error: expected ';' after expression
rtx v107; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2070:5: error: use of undeclared identifier 'v107'
rtx v107; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2071:4: error: expected ';' after expression
rtx v108; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2071:5: error: use of undeclared identifier 'v108'
rtx v108; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2083:4: error: expected ';' after expression
rtx v120; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2083:5: error: use of undeclared identifier 'v120'
rtx v120; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2131:4: error: expected ';' after expression
rtx v168; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2131:5: error: use of undeclared identifier 'v168'
rtx v168; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2149:4: error: expected ';' after expression
rtx v186; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2149:5: error: use of undeclared identifier 'v186'
rtx v186; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2168:4: error: expected ';' after expression
rtx v205; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2168:5: error: use of undeclared identifier 'v205'
rtx v205; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2180:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2180:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2183:4: error: expected ';' after expression
rtx v220; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/combine.c:2183:5: error: use of undeclared identifier 'v220'
rtx v220; // rbp 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/try_combine/src/obj/combine.o] Error 1
